--- a/style.css
+++ b/style.css
@@ -1,128 +1,30 @@
-
-
-ul {
-    padding-left:0;
-    
-}​
-
-  li{
-    margin-top: 10px;
-    border:1px solid grey;
-}
-
+/* Ce Liu hompage style (copied from Miki's page */
+ 
+/*body{*/
+/*	font: 15px 'Lato', Arial, sans-serif;*/
+/*	color: #000;*/
+/*	background-color: rgb(233,234,237); !*rgb(204,204,204);*! !*#565656;*!*/
+/*}*/
 html, body {
 	Font-Family: 'Open Sans', Sans-Serif;
 	Font-Size: 15px;
-	color: #111;
-	background-color: white;
+	color: black;
+	background-color: rgb(250,250,250);
 	padding: 0;
 	margin: 1em 0 0 0;
 	height: 100%; /* footerSticky */
 	line-height: 130%;
 }
 
-a:hover {
-	text-decoration: underline;
-}
-
-
-h3 {
-	margin:0px 0px;
-	padding:0px;
-	font-weight: bold;
-	Font-Family: 'Raleway', Sans-Serif;
-}
-
-h4{
-	Font-Family: 'Raleway', Sans-Serif;
-	font-size: 1.2em;
-	padding-top:0px;
-	margin-top:0px;
-}
-.title{
-	Font-Family: 'Raleway', Sans-Serif;
-	font-weight: bold;
-	color: black;
-	font-size: 1.5em
-}
-
-.authors {
-	Font-Family: 'Raleway', Sans-Serif;
-	font-weight: normal;
-	color: navy;
-	font-size: .99em
-}
-
-.authors_individual {
-	Font-Family: 'Raleway', Sans-Serif;
-	font-weight: normal;
-	color: navy;
-	font-size: 1.5em
-}
-
-
-a img {
-	border:0;
-}
-
-p, li {
-	line-height: 140%;
-	text-align: justify;
-}
-
-ul {
-	margin: 0 0 0 0;
-}
-
-h1 { font-size: 2em; }
-h2 { font-size: 1.7em; }
-h3 { font-size: 1em; }
-
-
-div.my_name {
-	font-size: 2em;
-	margin-bottom: 0.3em;
-	font-weight: bold;
-}
-
-div.my_details {
-	font-size: 1.1em;
-	line-height: 150%;
-	margin-bottom: 0.3em;
-}
-
-.clean { 
-	clear: both;
+tr{
 	display: block;
+	margin: 2px 0;
 }
 
-#footer_spacer
-{
-	height: 3em;
-}
-
-#footer 
-{
-	/*height: 50px;*/
-	padding: 3px;
-	border: none;
-	text-align: left;
-}
-
-/*#footer a {
-color: white;
-text-decoration: underline;
-}*/
-
-
-.article_title {
-    text-align: left;
-    font-weight: bold;
-    font-size: 1.5em;
-    line-height: 140%;
-}
-
-
+/* body,td,th,tr,p,a {
+    font-family: 'Lato', Verdana, Helvetica, sans-serif;
+    font-size: 12px
+    } */
 .dp {
 	/* border-style: solid; */
 	/* border-width: 2px; */
@@ -132,84 +34,349 @@ text-decoration: underline;
 
 }
 
-.paper-icon {
-	border-style: solid;
-	border-width: 2px;
-	border-color: black;
-	border-radius:10px;
-	max-width:400px;
-	margin:auto;
-	margin-top:auto;
-	margin-bottom:auto;
-
+.container {
+	width: 1000px;
+	min-height: 1000px;
+	max-height: 999999px; /* prevents font boosting */
+	margin: 56px auto 20px; /* top right bottom left */
+	box-shadow: 0 0 7px rgb(100,100,100);
+	text-align: left;
+	background: #fff;
+	padding: 14px 14px 14px 14px; /* top right bottom left */
+	z-index: 1;
 }
 
-.left {
-	float: left;
-	padding: 20px 20px 20px 20px;
-	border-style: solid;
-	border-width: 0px;
-	/*border-color: black;*/
-	border-radius:10px;
+papertitle {
+font-family: 'Lato', Verdana, Helvetica, sans-serif;
+font-size: 17px;
+font-weight: 600
 }
 
-.paper-header {
-
-	border-radius:10px;
-	max-width:400px;
-	margin:auto;
-	margin-top:auto;
-	margin-bottom:auto;
-
-}
-
-.venue{
-	text-align:right;
-	font-weight: bold;
-	color:darkred;
-	font-size:1.2em;
-}
-
-/*.publications{*/
-/*	padding-left:40px;*/
-/*	padding-right:40px;*/
-/*	padding-bottom:20px;*/
-/*	border-radius:25px;*/
-/*}*/
-.paper{
-	background-color:white;
-	margin-top:20px;
-	padding-left:40px;
-	padding-right:40px;
-	padding-bottom:20px;
-	padding-top:20px;
-	border-radius:25px;
-}
-
-.paper_individual{
-	background-color:white;
-	margin-top:20px;
-	padding-left:40px;
-	padding-right:40px;
-	padding-bottom:20px;
-	padding-top:20px;
-	border-radius:25px;
+.profile{
+    font-family: 'Lato', Verdana, Helvetica, sans-serif;
+    font-size: 13px
 }
 
 .bio{
-	/* background-color:#eeedf7; */
-	margin-top:10px;
-	padding-left:40px;
-	padding-right:40px;
-	padding-bottom:20px;
-	padding-top:20px;
-	border-radius:25px;
+    font-family: 'Lato', Verdana, Helvetica, sans-serif;
+    font-size: 14px
+}
+
+.news{
+    font-family: 'Lato', Verdana, Helvetica, sans-serif;
+    font-size: 14px
+}
+
+.paper{
+    font-family: 'Lato', Verdana, Helvetica, sans-serif;
+    font-size: 19px
+}
+/*.paper{*/
+/*	background-color:white;*/
+/*	margin-top:20px;*/
+/*	padding-left:40px;*/
+/*	padding-right:40px;*/
+/*	padding-bottom:20px;*/
+/*	padding-top:20px;*/
+/*	border-radius:25px;*/
+/*}*/
+
+/*.paper_individual{*/
+/*	background-color:white;*/
+/*	margin-top:20px;*/
+/*	padding-left:40px;*/
+/*	padding-right:40px;*/
+/*	padding-bottom:20px;*/
+/*	padding-top:20px;*/
+/*	border-radius:25px;*/
+/*}*/
+
+
+.education{
+    font-family: 'Lato', Verdana, Helvetica, sans-serif;
+    font-size: 13px
 }
 
 
-.name{
-	font-size:2.0em;
-	text-align:center;
-	padding:10px;
-	/*font-family: ;*/
+.service{
+	margin-bottom: 5pt; 
+	margin-top: 5pt;
+}
+
+.service a {
+	/* unvisited link */
+	text-decoration: none;
+	color: #000088;
+}
+.service a:hover {
+	text-decoration: underline;
+}
+.service a:link {
+	color: #000088;
+}
+
+.service a:visited {
+	color: #000088;
+}
+
+/* .paper{
+	font: 15px Times New Roman, Serif;
+} */
+
+.oral{
+	font-weight: bold;
+	color: #880000;
+}
+
+.award{
+	font-weight: bold;
+	color: MediumVioletRed;
+}
+
+.footer {
+	text-align: center;
+	font-size: 85%;
+}
+
+.name {
+	font-size: 190%;
+	font-weight: bold;
+	display: block;
+	text-align: left;
+	margin: 0;
+}
+
+/* Menu */
+
+.menu {
+	background-color: rgb(45,45,45);
+    left: 0;
+    top: 0;
+    width: 100%;
+	padding: 12px 0px;
+	text-align: center;
+	position: fixed;
+	z-index: 100;
+	width: 100%
+}
+
+.menu a {
+	font-size: 120%;
+	/*font-weight: bolder;*/
+	padding: 0.25ex 2ex;
+	color: rgb(240,240,240);
+	text-decoration: none;
+	transition: .2s;
+}
+
+.menu a:link {
+	color: rgb(240,240,240);
+	/*color: #9e9e9e;*/
+}
+
+.menu a:visited {
+	color: rgb(240,240,240);
+	/*color: #9e9e9e;*/
+}
+
+.menu a:hover, .menu a:active {
+    color: rgb(160,160,160);
+    /*color: #ffffff;*/
+	text-decoration: none;
+}
+
+/* Email */
+
+.hide { display: none; }
+.mock { }
+.unselectable { /* http://stackoverflow.com/questions/2310734/how-to-make-html-text-unselectable */
+ 	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* News */
+
+a.button {
+	text-decoration:none;
+	color: rgb(0,0,200);
+	cursor: pointer
+}
+
+table.news_table {
+	border: 0;
+	height: 210px;
+	display: block;
+	overflow: auto;	
+}
+
+table.news_table td:first-child { /* "New!" icon */
+	vertical-align: top;
+}
+
+table.news_table td:nth-child(2) { /* Month */
+	width: 10px;
+	text-align: left;
+	vertical-align: top;
+	font-style: italic;
+}
+
+table.news_table td:nth-child(3) { /* Day */
+	width: 10px;
+	text-align: left;
+	vertical-align: top;
+	font-style: italic;
+}
+
+table.news_table td:nth-child(4) { /* Year */
+	width: 10px;
+	vertical-align: top;
+	font-style: italic;
+}
+
+table.news_table td:nth-child(5) { /* Margin */
+	width: 6px;
+}
+
+table.news_table td:nth-child(6) { /* Text */
+	vertical-align: top;
+}
+
+/* Links */
+
+a {
+  	text-decoration:none;
+}
+
+a:link, a:visited {
+	color: #1762e0;
+    text-decoration:none;
+}
+
+a:hover {
+	color: #333;
+}
+
+a.anchor {
+	display: block; 
+	position: relative; 
+	top: -38px; 
+	visibility: hidden;
+}
+
+p.small {line-height:70%;}
+p.big {line-height:200%;}
+
+/* Section headings */
+
+.section {
+	font-size: 160%;
+	font-weight: bold;
+	display: block;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	padding-top: 10px;
+	padding-bottom: 3px;
+	padding-left: 0px;
+	vertical-align: middle;
+	border-top: 1px solid rgb(160,160,160);
+}
+
+
+/* Projects */
+
+.project_name {
+	font-size: 110%;
+	font-weight: bold;
+	display: block;
+	padding-bottom: 6px;
+}
+
+.project_abstract {
+	display: block;
+	padding-bottom: 6px;
+}
+
+table.projects_table {
+	vertical-align: top;
+	border-spacing: 6px 14px;
+}
+
+img.project_thumbnail {
+	width: 250px;
+	border: 1px solid black;
+	padding: 1px;
+}
+
+table.my_table {
+	border-spacing: 6px 14px; /* horiz vert */
+}
+
+
+table.my_table td.image {
+	text-align: center;
+	vertical-align: top;
+}
+
+img.thumb {
+	width: 160px;
+	border: 1px solid black;
+	padding: 1px;
+}
+
+/* Lists */
+
+ul {
+	margin-left: 18px;
+	padding-left: 4px; 
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+/* Talks */
+
+table.talks {
+	margin-top: 10px;
+	margin-left: 0px;
+}
+
+
+/* Press */
+
+table.press {
+	margin-left: 8px;
+
+}
+
+#press1 ul {
+	list-style-type: none;
+	margin-left: 0;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+#press1 li {
+	margin-bottom: 3px;
+}
+
+.emph {
+	font-size: 1.15em;
+	font-weight: bold;
+}
+
+.abstract {
+	width:90%; 
+	margin:10px; 
+	padding:10px; 
+	background:ivory;
+	border:2px solid #aaa;
+	display: none;
+}
+
+
+.date {
+	font-size: 80%;
 }
