--- a/style.css
+++ b/style.css
@@ -5,15 +5,11 @@
 /*	color: #000;*/
 /*	background-color: rgb(233,234,237); !*rgb(204,204,204);*! !*#565656;*!*/
 /*}*/
-html, body {
-	Font-Family: 'Open Sans', Sans-Serif;
-	Font-Size: 15px;
-	color: black;
-	background-color: rgb(250,250,250);
-	padding: 0;
-	margin: 1em 0 0 0;
-	height: 100%; /* footerSticky */
-	line-height: 130%;
+body {
+	font-family: 'Lato', Verdana, Helvetica, sans-serif;
+	font-size: 14px;
+	background-color: #ffffff;
+	color: #000000;
 }
 
 tr{
@@ -47,9 +43,12 @@ tr{
 }
 
 papertitle {
-font-family: 'Lato', Verdana, Helvetica, sans-serif;
-font-size: 17px;
-font-weight: 600
+	font-size: 18px;
+	font-weight: 500;
+	color: #2980b9;
+	display: block;
+	margin-bottom: 0;
+	line-height: 1.2;
 }
 
 .profile{
@@ -58,39 +57,78 @@ font-weight: 600
 }
 
 .bio{
-    font-family: 'Lato', Verdana, Helvetica, sans-serif;
-    font-size: 14px
+    font-size: 14px;
+    line-height: 1.5;
+    margin: 10px 0;
+}
+
+.bio a {
+    color: #1772d0;
+    text-decoration: none;
+}
+
+.bio a:hover {
+    color: #f09228;
 }
 
 .news{
-    font-family: 'Lato', Verdana, Helvetica, sans-serif;
-    font-size: 14px
+    color: #444;
+    line-height: 1.6;
 }
 
-.paper{
-    font-family: 'Lato', Verdana, Helvetica, sans-serif;
-    font-size: 19px
+.paper {
+    margin-bottom: 30px;
+    width: 100%;
 }
-/*.paper{*/
-/*	background-color:white;*/
-/*	margin-top:20px;*/
-/*	padding-left:40px;*/
-/*	padding-right:40px;*/
-/*	padding-bottom:20px;*/
-/*	padding-top:20px;*/
-/*	border-radius:25px;*/
-/*}*/
 
-/*.paper_individual{*/
-/*	background-color:white;*/
-/*	margin-top:20px;*/
-/*	padding-left:40px;*/
-/*	padding-right:40px;*/
-/*	padding-bottom:20px;*/
-/*	padding-top:20px;*/
-/*	border-radius:25px;*/
-/*}*/
+.paper table {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0;
+    margin: 0;
+}
 
+.paper td {
+    vertical-align: top;
+    padding: 0 20px 20px 0;
+}
+
+.paper td:first-child {
+    width: 260px;
+    vertical-align: middle;
+}
+
+.paper td:last-child {
+    width: calc(100% - 260px);
+    padding-right: 0;
+    vertical-align: middle;
+}
+
+.paper img {
+    width: 260px;
+    height: auto;
+    object-fit: contain;
+    border-radius: 4px;
+    margin-right: 10px;
+}
+
+.paper img:hover {
+    transform: scale(1.02);
+}
+
+.paper a {
+    color: #1772d0;
+    text-decoration: none;
+}
+
+.paper a:hover {
+    color: #f09228;
+}
+
+.paper br {
+    display: block;
+    margin: 2px 0;
+}
 
 .education{
     font-family: 'Lato', Verdana, Helvetica, sans-serif;
@@ -139,50 +177,32 @@ font-weight: 600
 }
 
 .name {
-	font-size: 190%;
-	font-weight: bold;
-	display: block;
-	text-align: left;
-	margin: 0;
+	font-family: 'Lato', Verdana, Helvetica, sans-serif;
+	font-size: 32px;
+	font-weight: 400;
+	color: #000000;
+	margin-bottom: 10px;
 }
 
 /* Menu */
 
 .menu {
-	background-color: rgb(45,45,45);
-    left: 0;
-    top: 0;
-    width: 100%;
-	padding: 12px 0px;
+	margin-bottom: 40px;
 	text-align: center;
-	position: fixed;
+	position: relative;
 	z-index: 100;
-	width: 100%
 }
 
 .menu a {
-	font-size: 120%;
-	/*font-weight: bolder;*/
-	padding: 0.25ex 2ex;
-	color: rgb(240,240,240);
+	margin: 0 10px;
+	color: #666;
 	text-decoration: none;
-	transition: .2s;
+	font-size: 18px;
+	transition: color 0.3s ease;
 }
 
-.menu a:link {
-	color: rgb(240,240,240);
-	/*color: #9e9e9e;*/
-}
-
-.menu a:visited {
-	color: rgb(240,240,240);
-	/*color: #9e9e9e;*/
-}
-
-.menu a:hover, .menu a:active {
-    color: rgb(160,160,160);
-    /*color: #ffffff;*/
-	text-decoration: none;
+.menu a:hover {
+	color: #111;
 }
 
 /* Email */
@@ -248,7 +268,8 @@ table.news_table td:nth-child(6) { /* Text */
 /* Links */
 
 a {
-  	text-decoration:none;
+  	color: #1772d0;
+    text-decoration: none;
 }
 
 a:link, a:visited {
@@ -257,7 +278,7 @@ a:link, a:visited {
 }
 
 a:hover {
-	color: #333;
+	color: #f09228;
 }
 
 a.anchor {
@@ -273,16 +294,11 @@ p.big {line-height:200%;}
 /* Section headings */
 
 .section {
-	font-size: 160%;
-	font-weight: bold;
+	font-size: 24px;
+	font-weight: 500;
+	color: #000000;
+	margin-bottom: 15px;
 	display: block;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	padding-top: 10px;
-	padding-bottom: 3px;
-	padding-left: 0px;
-	vertical-align: middle;
-	border-top: 1px solid rgb(160,160,160);
 }
 
 
@@ -330,10 +346,7 @@ img.thumb {
 /* Lists */
 
 ul {
-	margin-left: 18px;
-	padding-left: 4px; 
-	margin-top: 0;
-	margin-bottom: 0;
+	padding-left: 20px;
 }
 
 /* Talks */
@@ -379,4 +392,61 @@ table.press {
 
 .date {
 	font-size: 80%;
+}
+
+.information {
+	font-size: 14px;
+	line-height: 1.5;
+	margin: 5px 0;
+	color: #444;
+}
+
+.information a {
+	color: #1772d0;
+	text-decoration: none;
+}
+
+.information a:hover {
+	color: #f09228;
+}
+
+papertitle a {
+	color: #2980b9;
+	text-decoration: none;
+	transition: color 0.3s ease;
+}
+
+papertitle a:hover {
+	color: #666;
+}
+
+.paper em {
+	font-style: italic;
+	font-weight: normal;
+}
+
+@media (max-width: 800px) {
+    body {
+        padding: 15px;
+    }
+    
+    .profile td {
+        display: block;
+        width: 100% !important;
+        text-align: center;
+    }
+    
+    .dp {
+        margin-bottom: 20px;
+    }
+    
+    .paper td {
+        display: block;
+        width: 100% !important;
+        text-align: center;
+    }
+    
+    .paper img {
+        margin-bottom: 20px;
+    }
 }
